# mtgo-collection-manager-old

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Taskfile.yml  build.env  download_zip.py  linux-fltk-deps.txt  wmake.ps1
.devcontainer/: Dockerfile  devcontainer.json
.github/: constants.env
.github/workflows/: auto-clang-format.yml  benchmarks.yml  integration-ci.yml  mtgogetter-ci.yml  mtgogetter.yml  mtgoparser-ci.yml  mtgoupdater-ci.yml
build-util/: README.md  boost-exclude-libs.txt  integration.sh
build-util/dev-ubuntu/: install-ubuntu-fltk-dev-headers.sh
build-util/integration/: build-mtgo-preprocessor.sh  build-mtgogetter.sh
go-backend/: go.mod  main.go
go-backend/cmd/: root.go
go-backend/cmd/mtgogetter/: download.go  root.go
go-backend/cmd/mtgogetter/download/: goat-card-defs.go  goat-price-hist.go
go-backend/pkg/mtgogetter/: mtgogetter.go
mtgogetter/: README.md  Tasks.yml  go.mod  go.sum  main.go
mtgogetter/cmd/mtgogetter/: download.go  update_all.go
mtgogetter/cmd/mtgogetter/download/: custom.go  goat-card-defs.go  goat-price-hist.go  scryfall-bulk.go  scryfall-sets.go
mtgogetter/cmd/mtgogetter/download/custom/: url-body-text.go  url-body.go
mtgogetter/pkg/mtgogetter/: goatbots_parse.go  mtgogetter.go  mtgogetter_test.go  scryfall_parse.go  scryfall_parse_test.go  state_log.go  state_log_accessor.go  state_log_accessor_test.go  state_log_test.go
mtgogui/: Cargo.toml  Tasks.yml  build.rs
mtgogui/src/: appdata.rs  assets.rs  collection.rs  collection_view.rs  gui.rs  main.rs  menubar.rs  mtgogui.rs  table.rs  util.rs
mtgogui/src/appdata/: metadata.rs  paths.rs  state.rs  update.rs  util.rs
mtgogui/src/collection/: processor.rs  stats.rs  view.rs
mtgogui/src/collection/stats/: container.rs  items.rs  util.rs  view.rs
mtgogui/src/collection/view/: table.rs
mtgogui/src/collection/view/table/: column.rs  util.rs
mtgogui/src/gui/: setup.rs
mtgogui/src/menubar/: about.rs  setup.rs  util.rs
mtgogui/src/menubar/about/: text.rs
mtgoparser/: .clang-format  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  Tasks.yml  cmake-format.yaml  input.hpp
mtgoparser/cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake  Utilities.cmake  mtgoparserConfig.cmake.in
mtgoparser/configured_files/: config.hpp.in
mtgoparser/include/: collection.hpp  goatbots.hpp  input.hpp  io.hpp  mtgo.hpp
mtgoparser/include/mtgo_preprocessor/: config.hpp  run.hpp  setup.hpp
mtgoparser/include/mtgoparser/: clap.hpp  collection.hpp  goatbots.hpp  io.hpp  mtg.hpp  mtgo.hpp  scryfall.hpp  util.hpp
mtgoparser/include/mtgoparser/clap/: command.hpp  option.hpp  parser.hpp  util.hpp
mtgoparser/include/mtgoparser/mtgo/: card.hpp  card_history.hpp  csv.hpp  history_aggregator.hpp  xml.hpp
mtgoparser/src/: CMakeLists.txt  example.cpp
mtgoparser/src/mtgo_preprocessor/: CMakeLists.txt  main.cpp  run.cpp  setup.cpp
mtgoparser/test/: CMakeLists.txt  CmakeLists.txt  benchmark_xml_parse.cpp  benchmarks.cpp  test_csv_parse.cpp  test_full_collection_parse.cpp  test_json_parse.cpp  test_xml_parse.cpp  tests.cpp
mtgoparser/test/test-data/: card-defs-small.json  price-hist-small.json
mtgoparser/test/test-data/mtgo/: Full Trade List-medium-3000cards.dek  Full Trade List-small-500cards.dek  Full Trade List-small-5cards.dek
mtgoupdater/: Cargo.toml  README.md  Tasks.yml
mtgoupdater/src/: date.rs  internal_only.rs  lib.rs  mtgo_card.rs  mtgo_preprocessor_api.rs  mtgogetter_api.rs  util.rs  zip.rs  zip_util.rs
mtgoupdater/tests/: mtgoupdater_mtgo_preprocessor.rs  mtgoupdater_mtgogetter.rs
rust-processing/: Cargo.toml
rust-processing/src/: lib.rs
rust-processing/src/download/: python_selenium.rs
src/: lib.rs  main.rs
src/download/: lib.rs
test/test-data/goatbots/: price-hist-small-5cards.json
test/test-data/mtgo/: Full Trade List-small-50cards.dek
test/test-data/mtgogetter-out/: README.md  scryfall-card.json  scryfall-small-100cards.json  scryfall-small-5cards.json  state_log.toml
test/test-data/scryfall/: default-cards-small-5cards.json  default-cards-small-87objs-50cards.json  sets-small-16sets.json
