[package]
name = "price-list-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dirs = "5.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.3"
serde_json = "1.0.95"
zip = "0.6.4"
