[package]
name = "mtgo-collection-manager"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mtgo"]
description = "Some kind of app that helps you manage your mtgo collection."
authors = ["Marc Beck König <mbkj@tutamail.com>"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.24"
dirs = "5.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.3"
reqwest = {version = "0.11.16", features = ["blocking"]}
serde = { version= "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
zip = "0.6.4"

[profile.release]
lto = true
codegen-units = 1
