[package]
name = "mtgoupdater"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mtgo"]
description = "Library for interoperating with MTGO Collection manager's C++ and Go code"
authors = ["Marc Beck König <mbkj@tutamail.com>"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
zip = "0.6.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"

[profile.release]
lto = true
codegen-units = 1
